mutations in progress